syntax = "proto3";

package resource;

import "github.com/golang/protobuf/ptypes/empty/empty.proto";
import "google/api/annotations.proto";

service Resource {
  rpc List (ListRequest) returns (ListReply) {
    option (google.api.http) = {
      get: "/v1/resources"
    };
  };
  rpc Authorizations (AuthorizationsRequest) returns (AuthorizationsReply) {
    option (google.api.http) = {
      post: "/v1/resources/authorizations",
      body: "*"
    };
  };
  rpc AddToTeam (AddToTeamRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/v1/resources/{resource_id}/organizations/{organization_name}/teams/{team_name}",
      body: "*"
    };
  };
  rpc RemoveFromTeam (RemoveFromTeamRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/resources/{resource_id}/organizations/{organization_name}/teams/{team_name}"
    };
  };

}

enum ResourceType {
  RESOURCE_STACK = 0;
  RESOURCE_DASHBOARD = 1;
  RESOURCE_USER = 2;
  RESOURCE_ORGANIZATION = 3;
  RESOURCE_TEAM = 4;
}

enum Action {
  ACTION_CREATE = 0;
  ACTION_READ = 1;
  ACTION_UPDATE = 2;
  ACTION_DELETE = 3;
}

message ResourceEntry {
  string id = 1;
  ResourceType type = 2;
  string name = 3;
}

message ListRequest {
}

message ListReply {
  repeated ResourceEntry resources = 1;
}

message IsAuthorizedRequest {
  string id = 1;
  ResourceType type = 2;
  Action action = 3;
}

message IsAuthorizedReply {
  string id = 1;
  ResourceType type = 2;
  Action action = 3;
  bool authorized = 4;
}

message AuthorizationsRequest {
  repeated IsAuthorizedRequest requests = 1;
}

message AuthorizationsReply {
  repeated IsAuthorizedReply replies = 1;
}

message AddToTeamRequest {
  string resource_id = 1;
  string organization_name = 2;
  string team_name = 3;
}

message RemoveFromTeamRequest {
  string resource_id = 1;
  string organization_name = 2;
  string team_name = 3;
}
